# neurons

./: CMakeLists.txt
include/: color.h  grid.h  input_group.h  neuron.h  output_group.h  texture_manager.h  vector.h  view.h  world.h
src/: CMakeLists.txt  color.cpp  grid.cpp  input_group.cpp  main.cpp  neuron.cpp  output_group.cpp  texture_manager.cpp  vector.cpp  view.cpp  world.cpp
